# agent_l

./: .env.example  .gitignore  01_tool_calling.py  01_tool_calling_real.py  README.md  pyproject.toml
docs/qweather_api/: city-lookup.md  weather-daily-forecast.md  weather-now.md
docs/superpowers/plans/: 2026-06-17-qweather-tool.md
docs/superpowers/specs/: 2026-06-17-qweather-tool-design.md  2026-06-18-jwt-autorenew-design.md
qweather/: __init__.py  agent.py  api.py  cache.py  config.py
scripts/: gen_qweather_jwt.py
tests/: test_agent.py  test_api.py  test_cache.py  test_config.py
