[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.109.2",
    "cryptography>=49.0.0",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.5",
    "openai>=2.42.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
